--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,26 @@ dependencies:
     sdk: flutter
 
 
+  # https://pub.dev/packages/mvc_application/
+  mvc_application: ^7.0.0
+
+  # https://pub.dev/packages/state_set/
+  state_set: ^3.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # https://pub.dev/packages/google_fonts/
+  google_fonts: ^2.0.0
+
+  carousel_slider: ^4.0.0-nullsafety.0
+
+  easy_dynamic_theme: ^2.0.0
+
+  firebase_core: ^1.0.0
+  firebase_auth: ^1.0.0
+  google_sign_in: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +60,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+
+    - family: Electrolize
+      fonts:
+        - asset: fonts/Electrolize-Regular.ttf
+
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
