--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.2.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -24,6 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # https://pub.dev/packages/gap/
+  gap: ^2.0.0
+
+  # https://pub.dev/packages/provider/
+  provider: ^5.0.0
 
   # https://pub.dev/packages/mvc_application/
   mvc_application: ^7.0.0
@@ -43,7 +48,9 @@ dependencies:
   easy_dynamic_theme: ^2.0.0
 
   firebase_core: ^1.0.0
+
   firebase_auth: ^1.0.0
+
   google_sign_in: ^5.0.0
 
 dev_dependencies:
