--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0
+version: 1.4.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -24,6 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # https://pub.dev/packages/easy_web_view/
+#  easy_web_view: ^1.0.0
+
+  # https://pub.dev/packages/universal_html/
+  universal_html: ^2.0.0
+
   # https://pub.dev/packages/gap/
   gap: ^2.0.0
 
@@ -31,7 +37,8 @@ dependencies:
   provider: ^5.0.0
 
   # https://pub.dev/packages/mvc_application/
-  mvc_application: ^7.0.0
+  mvc_application: #^7.0.0
+    path: ../../packages/mvc_application
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
