--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.4.0
+version: 1.4.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # https://github.com/mdg-iitr/scrollytell
+  scrollytell: #^1.0.0
+    path: ../../apps/scrollytell
 
   # https://pub.dev/packages/easy_web_view/
 #  easy_web_view: ^1.0.0
