--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,16 +20,20 @@ version: 1.6.0
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
+
+
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   # https://pub.dev/packages/url_launcher/
   url_launcher: ^6.0.0
 
   # https://github.com/mdg-iitr/scrollytell
-  scrollytell: #^1.0.0
-    path: ../../apps/scrollytell
+  scrollytell: ^1.0.0
+#    path: ../../apps/scrollytell
 
   # https://pub.dev/packages/easy_web_view/
 #  easy_web_view: ^1.0.0
@@ -44,8 +48,8 @@ dependencies:
   provider: ^6.0.0
 
   # https://pub.dev/packages/mvc_application/
-  mvc_application: #^7.0.0
-    path: ../../packages/mvc_application
+  mvc_application: ^7.0.0
+#    path: ../../packages/mvc_application
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
@@ -97,8 +101,10 @@ flutter:
         - asset: fonts/Electrolize-Regular.ttf
 
   assets:
+    - assets/i10n/i10n.csv
     - assets/images/
     - assets/images/carousel/
+    - assets/images/packages/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
