--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.10.0
+version: 1.11.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -25,6 +25,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
+  firebase_crashlytics: ^2.0.0
+
+  # https://pub.dev/packages/auto_size_text/
+  auto_size_text: ^3.0.0-nullsafety.0
 
   # https://pub.dev/packages/url_launcher/
   url_launcher: ^6.0.0
