--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.24.0
+version: 1.25.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
+  # https://pub.dev/packages/file_picker/
+  file_picker: ^4.0.0
 
   firebase_crashlytics: ^2.0.0
 
@@ -52,7 +55,7 @@ dependencies:
 
   # https://pub.dev/packages/mvc_application/
   mvc_application: ^7.0.0
-#    path: ../../packages/mvc_application
+ #   path: ../../packages/mvc_application
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
@@ -108,6 +111,7 @@ flutter:
     - assets/images/
     - assets/images/carousel/
     - assets/images/packages/
+    - assets/images/flutteruis/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
