--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -75,7 +75,7 @@ linter:
     - control_flow_in_finally
     - curly_braces_in_flow_control_structures
     # - diagnostic_describe_all_properties # nice to have for libs but overkill for applications
-    - directives_ordering
+    # - directives_ordering  # Ordering the import statements
     - empty_catches
     - empty_constructor_bodies
     - empty_statements
