--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.28.1
+version: 1.29.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -26,13 +26,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  # https://pub.dev/packages/auto_size_text/
+  auto_size_text: ^3.0.0-nullsafety.0
+
   # https://pub.dev/packages/file_picker/
   file_picker: ^4.0.0
 
   firebase_crashlytics: ^2.0.0
-
-  # https://pub.dev/packages/auto_size_text/
-  auto_size_text: ^3.0.0-nullsafety.0
 
   # https://pub.dev/packages/url_launcher/
   url_launcher: ^6.0.0
@@ -59,6 +59,8 @@ dependencies:
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
+#    path: ../../packages/state_set
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
