--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.32.0
+version: 1.32.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -60,7 +60,6 @@ dependencies:
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
 #    path: ../../packages/state_set
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
