--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.35.0
+
+version: 1.36.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -54,8 +55,8 @@ dependencies:
   provider: ^6.0.0
 
   # https://pub.dev/packages/mvc_application/
-  mvc_application: ^7.0.0
-#    path: ../../packages/mvc_application
+  mvc_application: #^8.0.0
+    path: ../../packages/mvc_application
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
