--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.36.0
+version: 1.36.0+02
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -83,6 +83,10 @@ dependencies:
 
   # https://pub.dev/packages/google_sign_in/
   google_sign_in: ^5.0.0
+
+  # https://pub.dev/packages/flutter_markdown/
+  # Try to use this instead of auto_size_text one day
+  #flutter_markdown: ^0.6.0
 
 dev_dependencies:
   flutter_test:
