--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.37.1
+version: 1.38.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -57,6 +57,11 @@ dependencies:
   # https://pub.dev/packages/mvc_application/
   mvc_application: ^8.0.0
 #    path: ../../packages/mvc_application
+
+  mvc_web:
+#      path: ../../packages/mvc_web
+    git:
+      url: git://github.com/Andrious/mvc_web.git
 
   # https://pub.dev/packages/state_set/
   state_set: ^3.0.0
