--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,31 +16,74 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.40.1
+version: 1.41.0
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-
   # https://pub.dev/packages/auto_size_text/
   auto_size_text: ^3.0.0
+
+  # https://pub.dev/packages/carousel_slider/
+  carousel_slider: ^4.0.0
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+  # https://pub.dev/packages/easy_dynamic_theme/
+  easy_dynamic_theme: ^2.0.0
 
   # https://pub.dev/packages/file_picker/
   file_picker: ^4.0.0
 
+  # https://pub.dev/packages/firebase_auth/
+  firebase_auth: ^3.0.0
+
+  # https://pub.dev/packages/firebase_core/
+  firebase_core: ^1.0.0
+
   firebase_crashlytics: ^2.0.0
 
-  # https://pub.dev/packages/url_launcher/
-  url_launcher: ^6.0.0
+  flutter:
+    sdk: flutter
+
+  flutter_localizations:
+    sdk: flutter
+
+  # https://pub.dev/packages/flutter_markdown/
+  # Try to use this instead of auto_size_text one day
+  #flutter_markdown: ^0.6.0
+
+  # https://pub.dev/packages/gap/
+  gap: ^2.0.0
+
+  # https://pub.dev/packages/google_fonts/
+  google_fonts: ^2.0.0
+
+  # https://pub.dev/packages/google_sign_in/
+  google_sign_in: ^5.0.0
+
+  # https://pub.dev/packages/l10n_translator/
+  l10n_translator: ^1.0.0
+
+  # https://pub.dev/packages/mvc_web/
+  mvc_web: ^1.0.0
+  #      path: ../../packages/mvc_web
+  #    git:
+  #      url: git://github.com/Andrious/mvc_web.git
+
+  # https://pub.dev/packages/provider/
+  provider: ^6.0.0
 
   # https://github.com/mdg-iitr/scrollytell
   scrollytell: ^1.0.0
 #    path: ../../apps/scrollytell
+
+  # https://pub.dev/packages/state_set/
+  state_set: ^3.0.0
+  #    path: ../../packages/state_set
 
   # https://pub.dev/packages/easy_web_view/
 #  easy_web_view: ^1.0.0
@@ -48,46 +91,8 @@ dependencies:
   # https://pub.dev/packages/universal_html/
   universal_html: ^2.0.0
 
-  # https://pub.dev/packages/gap/
-  gap: ^2.0.0
-
-  # https://pub.dev/packages/provider/
-  provider: ^6.0.0
-
-  mvc_web: ^1.0.0
-#      path: ../../packages/mvc_web
-#    git:
-#      url: git://github.com/Andrious/mvc_web.git
-
-  # https://pub.dev/packages/state_set/
-  state_set: ^3.0.0
-#    path: ../../packages/state_set
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
-  # https://pub.dev/packages/google_fonts/
-  google_fonts: ^2.0.0
-
-  # https://pub.dev/packages/carousel_slider/
-  carousel_slider: ^4.0.0
-
-  # https://pub.dev/packages/easy_dynamic_theme/
-  easy_dynamic_theme: ^2.0.0
-
-  # https://pub.dev/packages/firebase_core/
-  firebase_core: ^1.0.0
-
-  # https://pub.dev/packages/firebase_auth/
-  firebase_auth: ^3.0.0
-
-  # https://pub.dev/packages/google_sign_in/
-  google_sign_in: ^5.0.0
-
-  # https://pub.dev/packages/flutter_markdown/
-  # Try to use this instead of auto_size_text one day
-  #flutter_markdown: ^0.6.0
+  # https://pub.dev/packages/url_launcher/
+  url_launcher: ^6.0.0
 
 dev_dependencies:
   flutter_test:
