--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.43.1+02
+version: 1.44.0
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -95,9 +95,9 @@ dependencies:
   # https://pub.dev/packages/provider/
   provider: ^6.0.0
 
-  # https://github.com/mdg-iitr/scrollytell
-  scrollytell: ^1.0.0
-#    path: ../../apps/scrollytell
+#  # https://github.com/mdg-iitr/scrollytell
+#  scrollytell: ^1.0.0
+##    path: ../../apps/scrollytell
 
   shrine_mvc:
     git: https://github.com/Andrious/shrine_mvc.git
