--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,105 +16,103 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.44.0
+version: 1.45.0
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+#  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   # https://pub.dev/packages/auto_size_text/
-  auto_size_text: ^3.0.0
+  auto_size_text: 3.0.0
 
   # https://github.com/Andrious/bazaar/
   bazaar:
     git: https://github.com/Andrious/bazaar.git
-#    path: ../../examples/bazaar
+#     path: ../../apps/bazaar
 
   # https://pub.dev/packages/carousel_slider/
-  carousel_slider: ^4.0.0
+  carousel_slider: 4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.4
 
   # https://github.com/aloisdeniel/flutter_device_preview
   # https://pub.dev/packages/device_preview/
-  device_preview: ^1.0.0
-#    git:
-#      url: https://github.com/AndriousSolutions/flutter_device_preview.git
-#      ref: master
-#      path: device_preview
+  device_preview: 1.0.0
+  #    git:
+  #      url: https://github.com/AndriousSolutions/flutter_device_preview.git
+  #      ref: master
+  #      path: device_preview
 
-#    path: C:/Programs/Tools/Projects/Flutter/apps/flutter_device_preview/device_preview
+  #    path: C:/Programs/Tools/Projects/Flutter/apps/flutter_device_preview/device_preview
 
   # https://pub.dev/packages/easy_dynamic_theme/
-  easy_dynamic_theme: ^2.0.0
+  easy_dynamic_theme: 2.2.0
 
   # https://pub.dev/packages/file_picker/
-  file_picker: ^4.0.0
+  file_picker: ^5.0.0 #4.5.1
 
   # https://pub.dev/packages/firebase_auth/
-  firebase_auth: ^3.0.0
+  firebase_auth: 4.1.2 #3.3.16
 
   # https://pub.dev/packages/firebase_core/
-  firebase_core: ^1.0.0
+  firebase_core: 2.2.0 #1.15.0
 
-  firebase_crashlytics: ^2.0.0
+  firebase_crashlytics: 3.0.5 #2.6.3
 
   flutter:
     sdk: flutter
+
+  # https://pub.dev/packages/fluttery_framework/
+  fluttery_framework: ^1.0.0
 
   flutter_localizations:
     sdk: flutter
 
   # You some HTML
-  flutter_widget_from_html: ^0.8.5
+  flutter_widget_from_html: 0.9.0 #0.8.5
 
   # https://pub.dev/packages/flutter_markdown/
   # Try to use this instead of auto_size_text one day
   #flutter_markdown: ^0.6.0
 
   # https://pub.dev/packages/gap/
-  gap: ^2.0.0
+  gap: 2.0.0
 
   # https://pub.dev/packages/google_fonts/
-  google_fonts: ^2.0.0
+  google_fonts: 3.0.1 #2.0.0
 
   # https://pub.dev/packages/google_sign_in/
-  google_sign_in: ^5.0.0
+  google_sign_in: 5.4.2 #5.3.0
 
   # https://pub.dev/packages/l10n_translator/
-#  l10n_translator: 1.3.1
-
-  # https://pub.dev/packages/mvc_web/
-  mvc_web: ^1.0.0
-#    path: ../../packages/mvc_web
-  #    git:
-  #      url: git://github.com/Andrious/mvc_web.git
+  #  l10n_translator: 1.3.1
 
   # https://pub.dev/packages/provider/
-  provider: ^6.0.0
+  provider: 6.0.2
 
-#  # https://github.com/mdg-iitr/scrollytell
-#  scrollytell: ^1.0.0
-##    path: ../../apps/scrollytell
+  #  # https://github.com/mdg-iitr/scrollytell
+  #  scrollytell: ^1.0.0
+  ##    path: ../../apps/scrollytell
 
   shrine_mvc:
     git: https://github.com/Andrious/shrine_mvc.git
-#    path: ../../examples/shrine_mvc
+#     path: ../../examples/shrine_mvc
 
-  # https://pub.dev/packages/state_set/
-  state_set: ^3.0.0
-#    path: ../../packages/state_set
+#  # https://pub.dev/packages/state_set/
+#  state_set: ^3.0.0
+#  #    path: ../../packages/state_set
 
   # https://pub.dev/packages/easy_web_view/
-#  easy_web_view: ^1.0.0
+  #  easy_web_view: ^1.0.0
 
   # https://pub.dev/packages/universal_html/
-  universal_html: ^2.0.0
+  universal_html: 2.0.8
 
   # https://pub.dev/packages/url_launcher/
-  url_launcher: ^6.0.0
+  url_launcher: 6.1.6 #6.1.0
 
 dev_dependencies:
   flutter_test:
